[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/playerRed_roll.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[node name="Player" type="Sprite"]
position = Vector2( 4.5, 4.5 )
scale = Vector2( 0.425, 0.425 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Reload_speed" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Power_up" type="Timer" parent="."]
one_shot = true

[node name="hitbox" type="Area2D" parent="." groups=["Player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 1 )

[connection signal="timeout" from="Reload_speed" to="." method="_on_Reload_speed_timeout"]
[connection signal="timeout" from="Power_up" to="." method="_on_Power_up_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
